--- a/app/blocks/icon-button/icon-button.pug
+++ b/app/blocks/icon-button/icon-button.pug
@@ -2,8 +2,9 @@ include ../icon/icons
 
 mixin icon-button(iconn)
   +b.A.icon-button&attributes(attributes)
-    +icon(iconn).__icon
+    +e.container
+      +icon(iconn).__icon
 
-    if block
-      +e.SPAN.text
-        block
+      if block
+        +e.SPAN.text
+          block
