--- a/app/blocks/icon-button/icon-button.scss
+++ b/app/blocks/icon-button/icon-button.scss
@@ -1,14 +1,21 @@
 .icon-button {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  display: block;
   border: 1px solid #d2d3d3;
   border-radius: 3px;
   transition: all .25s ease-in-out;
-  padding: 9px;
   min-height: 40px;
   cursor: pointer;
   box-shadow: inset 0 1px 0 #fff;
+
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 9px;
+    width: 100%;
+    height: 100%;
+    min-height: inherit;
+  }
 
   &_uppercase {
     text-transform: uppercase;
