--- a/app/components/add-tags/add-tags.scss
+++ b/app/components/add-tags/add-tags.scss
@@ -17,6 +17,8 @@
     width: 24px;
     height: 24px;
 
+    .icon-button__container { padding: 0; }
+
     .icon-button__icon {
       width: 10px;
       height: 10px;
