--- a/app/components/search-bar-add/search-bar-add.scss
+++ b/app/components/search-bar-add/search-bar-add.scss
@@ -11,7 +11,8 @@
     .search-bar-add {
 
       &__button {
-        min-height: 32px;
+        height: 32px;
+        line-height: 32px;
       }
 
       &__search-bar {
@@ -23,6 +24,8 @@
   &__button {
     justify-content: center;
     padding: 0;
+    height: 40px;
+    line-height: 40px;
     min-width: 142px;
   }
 
