--- a/app/components/individual-info/individual-info.scss
+++ b/app/components/individual-info/individual-info.scss
@@ -39,7 +39,7 @@
   &__action {
     display: flex;
     align-items: center;
-    height: 100%;
+    height: 47px;
     padding: 0 16px;
     border-left: 1px solid #d2d3d3;
 
