--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -202,7 +202,7 @@ block layout-right
             +table-col._width_260
           +table-row._children
             +table-row._parent
-              +table-row._main._lvl_1
+              +table-row._main._lvl_1._shadow
                 +table-col._flexible._nowrap
                   +icon('icon-person').icon._person
                   +checkbox('row', 'value')._white.__checkbox
@@ -227,7 +227,7 @@ block layout-right
                     +table-text._size_small 12:14:32
                 +table-col._width_260
               +table-row._children
-                +table-row._main._left_padding._lvl_2
+                +table-row._main._left_padding._lvl_2._shadow
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
                     +checkbox('row', 'value')._white.__checkbox
@@ -279,7 +279,7 @@ block layout-right
                     +table-text._size_small 12:14:32
                 +table-col._width_260
               +table-row._children
-                +table-row._main._left_padding._lvl_2
+                +table-row._main._left_padding._lvl_2._shadow
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
                     +checkbox('row', 'value')._white.__checkbox
@@ -330,7 +330,7 @@ block layout-right
                     +table-text._size_small 12:14:32
                 +table-col._width_260
               +table-row._children
-                +table-row._main._left_padding._lvl_2
+                +table-row._main._left_padding._lvl_2._shadow
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
                     +checkbox('row', 'value')._white.__checkbox
