--- a/app/components/add-to-blacklist/add-to-blacklist.scss
+++ b/app/components/add-to-blacklist/add-to-blacklist.scss
@@ -14,6 +14,9 @@
 
   &__action-btn {
     border-left: 1px solid #d2d3d3;
+    padding-top: 0;
+    padding-bottom: 0;
+    line-height: 58px;
   }
 
   &__content {
