--- a/app/components/setting-actions/setting-actions.scss
+++ b/app/components/setting-actions/setting-actions.scss
@@ -20,6 +20,8 @@
 
   &__action {
     border-left: 1px solid #d2d3d3;
-    height: 100%;
+    padding-top: 0;
+    padding-bottom: 0;
+    line-height: 56px;
   }
 }
