--- a/app/blocks/popup/popup.scss
+++ b/app/blocks/popup/popup.scss
@@ -75,7 +75,8 @@
     display: block;
     width: 100%;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     &_scrolless {
       overflow: initial;
