--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -61,7 +61,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b Novotel Moscow City
@@ -85,7 +85,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b ООО «ПТК»
@@ -108,7 +108,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b Сбербанк
@@ -131,7 +131,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b Globalone
@@ -154,7 +154,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text-block
                 +table-text
                   a(href="#")
@@ -179,7 +179,7 @@ block layout-right
         +table-row._parent
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b Газпром
@@ -205,7 +205,7 @@ block layout-right
               +table-row._main._lvl_1._shadow
                 +table-col._flexible._nowrap
                   +icon('icon-person').icon._person
-                  +checkbox('row', 'value')._white.__checkbox
+                  +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
                   +table-text
                     a(href="#")
                       b Васильев Генадий Николаевич
@@ -230,7 +230,7 @@ block layout-right
                 +table-row._main._left_padding._lvl_2._shadow
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
-                    +checkbox('row', 'value')._white.__checkbox
+                    +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
                     +table-text
                       a(href="#")
                         b 1234 5678 9067
@@ -243,7 +243,7 @@ block layout-right
                 +table-row._main._left_padding._lvl_2
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
-                    +checkbox('row', 'value')._white.__checkbox
+                    +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
                     +table-text
                       a(href="#")
                         b 1234 5678 9067
@@ -257,7 +257,7 @@ block layout-right
               +table-row._main._lvl_1
                 +table-col._flexible._nowrap
                   +icon('icon-person').icon._person
-                  +checkbox('row', 'value')._white.__checkbox
+                  +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
                   +table-text
                     a(href="#")
                       b Николаева Надежда Васильевна
@@ -282,7 +282,7 @@ block layout-right
                 +table-row._main._left_padding._lvl_2._shadow
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
-                    +checkbox('row', 'value')._white.__checkbox
+                    +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
                     +table-text
                       a(href="#")
                         b 1234 5678 9067
@@ -295,7 +295,7 @@ block layout-right
                 +table-row._main._left_padding._lvl_2
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
-                    +checkbox('row', 'value')._white.__checkbox
+                    +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
                     +table-text
                       a(href="#")
                         b 1234 5678 9067
@@ -308,7 +308,7 @@ block layout-right
             +table-row._parent
               +table-row._main._left_padding._lvl_1
                 +table-col._flexible._nowrap
-                  +checkbox('row', 'value')._white.__checkbox
+                  +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
                   +table-text
                     a(href="#")
                       b Александрова Александра  Александровна
@@ -333,7 +333,7 @@ block layout-right
                 +table-row._main._left_padding._lvl_2._shadow
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
-                    +checkbox('row', 'value')._white.__checkbox
+                    +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
                     +table-text
                       a(href="#")
                         b 1234 5678 9067
@@ -346,7 +346,7 @@ block layout-right
                 +table-row._main._left_padding._lvl_2
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
-                    +checkbox('row', 'value')._white.__checkbox
+                    +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
                     +table-text
                       a(href="#")
                         b 1234 5678 9067
@@ -359,7 +359,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b ООО «Робот-Икс»
@@ -382,7 +382,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text-block
                 +table-text
                   a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
@@ -408,7 +408,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b Energizer
@@ -431,7 +431,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b 7Days
@@ -455,7 +455,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b ВТБ 24
@@ -478,7 +478,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b Sun Clinic
@@ -501,7 +501,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b Хостел Сити
@@ -524,7 +524,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b Novotel Moscow City
@@ -548,7 +548,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b ООО «ПТК»
@@ -571,7 +571,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b Сбербанк
@@ -594,7 +594,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b Globalone
@@ -617,7 +617,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text-block
                 +table-text
                   a(href="#")
@@ -643,7 +643,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b Газпром
@@ -666,7 +666,7 @@ block layout-right
         +table-row
           +table-row._main
             +table-col._flexible._nowrap
-              +checkbox('row', 'value')._white.__checkbox
+              +checkbox('row', 'value')._white.__checkbox.js-index-checkbox
               +table-text
                 a(href="#" data-target-popup='#clients-popup' data-subtarget='#clients-popup-common-info').js-show-popup
                   b ООО «Робот-Икс»
