--- a/app/components/add-to-blacklist/add-to-blacklist.scss
+++ b/app/components/add-to-blacklist/add-to-blacklist.scss
@@ -31,7 +31,12 @@
   }
 
   &__cell-sm {
-    width: 100px;
+    width: 110px;
+
+    .add-to-blacklist__input {
+      text-align: center;
+      text-transform: uppercase;
+    }
   }
 
   &__cell-xs {
