--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -1,8 +1,8 @@
 .button {
   display: block;
   cursor: pointer;
-  transition: all .25s esae-in-out;
-  box-shadow: inset 0 1px 0 #fff;
+  transition: all .25s ease-in-out;
+  box-shadow: inset 0 1px 0 #fff, 0 1px 2px rgba(0, 0, 0, 0);
   padding: 12px 16px;
   text-align: center;
 
